# dds-matlab

./: .gitignore  .gitmodules  README.md  dxtmex.sln  dxtmex.vcxproj
source/: .gitignore  BUILD.m  CMakeLists.txt  INSTALL.m  OPTIONS.m
source/lib/x64/: DirectXTex.lib
source/lib/x86/: DirectXTex.lib
source/src/: CMakeLists.txt  dds.cpp  ddsfmt.cpp  ddsfmt.hpp  ddsio.cpp  ddsmex.cpp  ddsmex.hpp  ddsmex_dds.cpp  ddsmex_dds.hpp  ddsmex_maps.cpp  ddsmex_maps.hpp  ddsmex_mexerror.cpp  ddsmex_mexerror.hpp  ddsmex_mexutils.cpp  ddsmex_mexutils.hpp  directxtex.h  dxtfmt.cpp  dxtfmt.hpp  dxtmex.cpp  dxtmex_dxtimage.cpp  dxtmex_dxtimage.hpp  dxtmex_dxtimagearray.cpp  dxtmex_dxtimagearray.hpp  dxtmex_flags.hpp  dxtmex_maps.cpp  dxtmex_maps.hpp  dxtmex_mexerror.cpp  dxtmex_mexerror.hpp  dxtmex_mexutils.cpp  dxtmex_mexutils.hpp  dxtmex_pixel.cpp  dxtmex_pixel.hpp  dxtmex_utils.cpp  mlerrorutils.cpp
source/src/headers/: dds.h  ddsfmt.h  ddsio.h  ddsmex.hpp  ddsmex_mexerror.hpp  directxtex.h  dxgitypedefs.h  mlerrorutils.h
source/test/: ObjectArray.m  cubeproj.m  cubeproj2.m  cubeproj3.m  fishbowl.m  test.m  test1bitext.c  testbitextract.c  testbitextract.cpp  testconstexpr.cpp  v1.m  v2.m
