CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(dxtmex CXX)
SET(CMAKE_CXX_STANDARD 11)

SET(INSTALL_OUTPUT_PATH "../out/private")
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake) # add FindMatlab module

FIND_PACKAGE(MatlabLibs REQUIRED)

IF(MATLAB_FOUND)
	MESSAGE(STATUS "MATLAB Found, MATLAB MEX will be compiled.")
	ADD_SUBDIRECTORY(src)
ELSE(MATLAB_FOUND)
	MESSAGE("MATLAB not found... nothing will be built.")
ENDIF(MATLAB_FOUND)
